[gd_scene load_steps=3 format=3 uid="uid://cw7lmlukkk1qn"]

[ext_resource type="Script" path="res://menuP.gd" id="1_jmyc1"]
[ext_resource type="Texture2D" uid="uid://bro4x4cnrmnu4" path="res://767433345_8028565_1706x960.webp" id="2_01qcb"]

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jmyc1")

[node name="76743334580285651706x960" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.675264, 0.675)
texture = ExtResource("2_01qcb")

[node name="JUGAR" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 544.0
offset_top = 240.0
offset_right = 610.0
offset_bottom = 271.0
grow_horizontal = 2
grow_vertical = 2
text = "JUGAR"

[node name="INSTRUCCIONES" type="Button" parent="."]
layout_mode = 0
offset_left = 504.0
offset_top = 304.0
offset_right = 648.0
offset_bottom = 335.0
text = "INSTRUCCIONES"

[node name="CREDITOS" type="Button" parent="."]
layout_mode = 0
offset_left = 528.0
offset_top = 368.0
offset_right = 624.0
offset_bottom = 399.0
text = "CRÃ‰DITOS"

[connection signal="pressed" from="JUGAR" to="." method="_on_button_pressed"]
[connection signal="pressed" from="INSTRUCCIONES" to="." method="_on_instrucciones_pressed"]
[connection signal="pressed" from="CREDITOS" to="." method="_on_creditos_pressed"]
